fix: Ensure tooltip text wraps, even if no spaces are found; only allow images with no article appearances to be deleted

--- a/src/app/components/tooltip/tooltip.component.scss
+++ b/src/app/components/tooltip/tooltip.component.scss
@@ -10,6 +10,7 @@
   text-align: center;
   text-transform: none;
   white-space: wrap;
+  word-wrap: break-word;
   animation: slideUpAnimation 0.5s;
 }
 
